tests/lean/nary_overload.lean.expected.out
nary_overload.lean:16:6: error: ambiguous overload, possible interpretations
  [a, b, c]
  [a, b, c]
[a, b, c] : vec A
[a, b, c] : lst A
@vec.cons A a (@vec.cons A b (@vec.cons A c (@vec.nil A))) : vec.{1} A
@lst.cons A a (@lst.cons A b (@lst.cons A c (@lst.nil A))) : lst.{1} A
